--- a/index.html
+++ b/index.html
@@ -107,26 +107,26 @@
                   <a href="./index.html" class="text-primary-color text-[18px] font-medium active"> الرئيسية </a>
                 </li>
                 <li>
-                  <a href="./index.html" class="text-third-color text-[18px] font-medium"> من نحن </a>
+                  <a href="./about-us.html" class="text-third-color text-[18px] font-medium"> من نحن </a>
                 </li>
                 <li>
-                  <a href="./index.html" class="text-third-color text-[18px] font-medium"> اتصل بنا </a>
+                  <a href="./contact-us.html" class="text-third-color text-[18px] font-medium"> اتصل بنا </a>
                 </li>
                 <li>
-                  <a href="./index.html" class="text-third-color text-[18px] font-medium"> سجل كـتاجر </a>
+                  <a href="./be-store.html" class="text-third-color text-[18px] font-medium"> سجل كـتاجر </a>
                 </li>
                 <li>
-                  <a href="./index.html" class="text-third-color text-[18px] font-medium"> المتاجر </a>
+                  <a href="./stores.html" class="text-third-color text-[18px] font-medium"> المتاجر </a>
                 </li>
               </ul>
               <div class="flex justify-start items-center lg:flex-row sm:flex-col flex-wrap gap-4 relative">
-                <a href="" class="user">
+                <a href="./login.html" class="user">
                   <svg width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 12C14.7614 12 17 9.76142 17 7C17 4.23858 14.7614 2 12 2C9.23858 2 7 4.23858 7 7C7 9.76142 9.23858 12 12 12Z" stroke="#253D4E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M20.5901 22C20.5901 18.13 16.7402 15 12.0002 15C7.26015 15 3.41016 18.13 3.41016 22" stroke="#253D4E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>         
                 </a>
-                <a href="" class="cart">
+                <a href="./cart.html" class="cart">
                   <svg width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 2H3.74001C4.82001 2 5.67 2.93 5.58 4L4.75 13.96C4.61 15.59 5.89999 16.99 7.53999 16.99H18.19C19.63 16.99 20.89 15.81 21 14.38L21.54 6.88C21.66 5.22 20.4 3.87 18.73 3.87H5.82001" stroke="#253D4E" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M16.25 22C16.9404 22 17.5 21.4404 17.5 20.75C17.5 20.0596 16.9404 19.5 16.25 19.5C15.5596 19.5 15 20.0596 15 20.75C15 21.4404 15.5596 22 16.25 22Z" stroke="#253D4E" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
@@ -134,7 +134,7 @@
                     <path d="M9 8H21" stroke="#253D4E" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>                                       
                 </a>
-                <a href="" class="wishlist">
+                <a href="./wishlist.html" class="wishlist">
                   <svg width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12.62 20.8101C12.28 20.9301 11.72 20.9301 11.38 20.8101C8.48 19.8201 2 15.6901 2 8.6901C2 5.6001 4.49 3.1001 7.56 3.1001C9.38 3.1001 10.99 3.9801 12 5.3401C13.01 3.9801 14.63 3.1001 16.44 3.1001C19.51 3.1001 22 5.6001 22 8.6901C22 15.6901 15.52 19.8201 12.62 20.8101Z" stroke="#253D4E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>                    
@@ -172,16 +172,16 @@
           <a href="./index.html" class="text-primary-color text-[18px] font-medium active"> الرئيسية </a>
         </li>
         <li>
-          <a href="./index.html" class="text-third-color text-[18px] font-medium"> من نحن </a>
+          <a href="./about-us.html" class="text-third-color text-[18px] font-medium"> من نحن </a>
         </li>
         <li>
-          <a href="./index.html" class="text-third-color text-[18px] font-medium"> اتصل بنا </a>
+          <a href="./contact-us.html" class="text-third-color text-[18px] font-medium"> اتصل بنا </a>
         </li>
         <li>
-          <a href="./index.html" class="text-third-color text-[18px] font-medium"> سجل كـتاجر </a>
+          <a href="./be-store.html" class="text-third-color text-[18px] font-medium"> سجل كـتاجر </a>
         </li>
         <li>
-          <a href="./index.html" class="text-third-color text-[18px] font-medium"> المتاجر </a>
+          <a href="./stores.html" class="text-third-color text-[18px] font-medium"> المتاجر </a>
         </li>
       </ul>
       <div class="flex justify-start items-center flex-row gap-2">
@@ -1397,16 +1397,16 @@
               <a href="./index.html" class="text-third-color text-[16px] font-medium hover:text-primary-color"> الرئيسية </a>
             </li>
             <li>
-              <a href="./index.html" class="text-third-color text-[16px] font-medium hover:text-primary-color"> من نحن </a>
+              <a href="./about-us.html" class="text-third-color text-[16px] font-medium hover:text-primary-color"> من نحن </a>
             </li>
             <li>
-              <a href="./index.html" class="text-third-color text-[16px] font-medium hover:text-primary-color"> اتصل بنا </a>
+              <a href="./contact-us.html" class="text-third-color text-[16px] font-medium hover:text-primary-color"> اتصل بنا </a>
             </li>
             <li>
-              <a href="./index.html" class="text-third-color text-[16px] font-medium hover:text-primary-color"> سجل كـتاجر </a>
+              <a href="./be-store.html" class="text-third-color text-[16px] font-medium hover:text-primary-color"> سجل كـتاجر </a>
             </li>
             <li>
-              <a href="./index.html" class="text-third-color text-[16px] font-medium hover:text-primary-color"> المتاجر </a>
+              <a href="./stores.html" class="text-third-color text-[16px] font-medium hover:text-primary-color"> المتاجر </a>
             </li>
           </ul>
         </div>
