--- a/product-details.html
+++ b/product-details.html
@@ -263,6 +263,94 @@
                     </div>
                 </div>
             </div>
+            <hr class="my-5">
+            <div class="col-12">
+              <div class="product_details_tabs">
+                <div>
+                  <div class="nav nav-tabs border-0 flex justify-start items-start flex-row gap-3" id="nav-tab" role="tablist">
+                    <button class="nav-link active border border-solid border-[#ebebeb] text-third-color font-medium text-[18px]" id="nav-desc-tab" data-bs-toggle="tab" data-bs-target="#nav-desc" type="button" role="tab" aria-controls="nav-desc" aria-selected="true"> الوصف </button>
+                    <button class="nav-link" id="nav-reviews-tab" data-bs-toggle="tab" data-bs-target="#nav-reviews" type="button" role="tab" aria-controls="nav-reviews" aria-selected="false"> التقييمات (3) </button>
+                    <button class="nav-link" id="nav-store-tab" data-bs-toggle="tab" data-bs-target="#nav-store" type="button" role="tab" aria-controls="nav-store" aria-selected="false"> المتجر </button>
+                  </div>
+                </div>
+                <div class="tab-content mt-5" id="nav-tabContent">
+                  <div class="tab-pane fade show active" id="nav-desc" role="tabpanel" aria-labelledby="nav-desc-tab" tabindex="0">  
+                    <div class="flex justify-start items-start flex-col gap-3 mb-4">
+                      <h3 class="text-third-color font-semibold text-[20px]"> عنوان مختصر </h3>
+                      <ul class="flex justify-start items-start flex-col gap-3">
+                        <li class="text-fourth-color text-[16px] font-medium mb-0 leading-[1.8]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص    </li>
+                        <li class="text-fourth-color text-[16px] font-medium mb-0 leading-[1.8]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص    </li>
+                        <li class="text-fourth-color text-[16px] font-medium mb-0 leading-[1.8]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص    </li>
+                      </ul>
+                    </div>
+                    <div class="flex justify-start items-start flex-col gap-3 mb-4">
+                      <h3 class="text-third-color font-semibold text-[20px]"> عنوان مختصر </h3>
+                      <ul class="flex justify-start items-start flex-col gap-3">
+                        <li class="text-fourth-color text-[16px] font-medium mb-0 leading-[1.8]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص    </li>
+                        <li class="text-fourth-color text-[16px] font-medium mb-0 leading-[1.8]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص    </li>
+                        <li class="text-fourth-color text-[16px] font-medium mb-0 leading-[1.8]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص    </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="tab-pane fade" id="nav-reviews" role="tabpanel" aria-labelledby="nav-reviews-tab" tabindex="0"> 
+                    <div class="reviews_items flex justify-start items-start flex-col">
+                      <div class="review_item mb-4 border border-solid border-[#ebebeb] py-[25px] px-[20px] rounded-[15px] flex justify-start items-start flex-col gap-2">
+                        <div class="flex justify-between items-center flex-row flex-wrap w-100">
+                          <h6 class="text-third-color font-semibold text-[20px] mb-0"> أحمد يسري </h6>
+                          <div class="stars flex justify-start items-center flex-row gap-1">
+                            <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                            <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                            <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                            <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                            <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                          </div>
+                        </div>
+                        <span class="text-fourth-color text-[13px] font-medium"> 27-11-2020 </span>
+                        <p class="text-fourth-color text-[16px] font-medium leading-[1.7] mb-0">  هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
+                      </div>
+                      <div class="review_item mb-4 border border-solid border-[#ebebeb] py-[25px] px-[20px] rounded-[15px] flex justify-start items-start flex-col gap-2">
+                        <div class="flex justify-between items-center flex-row flex-wrap w-100">
+                          <h6 class="text-third-color font-semibold text-[20px] mb-0"> أحمد يسري </h6>
+                          <div class="stars flex justify-start items-center flex-row gap-1">
+                            <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                            <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                            <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                            <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                            <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                          </div>
+                        </div>
+                        <span class="text-fourth-color text-[13px] font-medium"> 27-11-2020 </span>
+                        <p class="text-fourth-color text-[16px] font-medium leading-[1.7] mb-0">  هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
+                      </div>
+                      <div class="review_item mb-4 border border-solid border-[#ebebeb] py-[25px] px-[20px] rounded-[15px] flex justify-start items-start flex-col gap-2">
+                        <div class="flex justify-between items-center flex-row flex-wrap w-100">
+                          <h6 class="text-third-color font-semibold text-[20px] mb-0"> أحمد يسري </h6>
+                          <div class="stars flex justify-start items-center flex-row gap-1">
+                            <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                            <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                            <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                            <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                            <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                          </div>
+                        </div>
+                        <span class="text-fourth-color text-[13px] font-medium"> 27-11-2020 </span>
+                        <p class="text-fourth-color text-[16px] font-medium leading-[1.7] mb-0">  هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
+                      </div>
+                      <form action="" class="w-50">
+                        <form action="" class="mt-5">
+                          <input class="form-control border-fourth-color mb-3" type="text" placeholder="الإسم" aria-label="">
+                          <input class="form-control border-fourth-color mb-3" type="email" placeholder="البريد الألكتروني" aria-label="">
+                          <input class="form-control border-fourth-color mb-3" type="phone" placeholder="رقم الهاتف" aria-label="">
+                          <textarea class="form-control mb-3" id="exampleFormControlTextarea1" rows="5" placeholder="التقييم"></textarea>
+                          <button class="bg-primary-color text-white px-[25px] py-[8px] rounded-[6px]"> إرسال </button>
+                        </form>
+                      </form>
+                    </div>
+                  </div>
+                  <div class="tab-pane fade" id="nav-store" role="tabpanel" aria-labelledby="nav-store-tab" tabindex="0"> المتجر </div>
+                </div>
+              </div>
+            </div>
         </div>
      </div>
     <!-- product details -->
