--- a/product-details.html
+++ b/product-details.html
@@ -347,7 +347,40 @@
                       </form>
                     </div>
                   </div>
-                  <div class="tab-pane fade" id="nav-store" role="tabpanel" aria-labelledby="nav-store-tab" tabindex="0"> المتجر </div>
+                  <div class="tab-pane fade" id="nav-store" role="tabpanel" aria-labelledby="nav-store-tab" tabindex="0">  
+                    <div class="store__details flex justify-start items-start flex-row gap-3 mb-2">
+                      <img src="./assets/images/store1.png" alt="store" class="w-[80px] h-[80px] rounded-full">
+                      <div class="flex justify-start flex-col items-start gap-1">
+                        <h6 class="text-third-color text-[22px] text-bold mb-0"> تاجر واحد </h6>
+                        <div class="reviews_products flex justify-start items-center flex-row gap-2">
+                          <div class="stars flex justify-start items-center flex-row gap-1">
+                              <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
+                              <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                              <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                              <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
+                              <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
+                          </div>
+                          <span class="text-fourth-color text-[13px] text-medium"> ( 32 تقييم ) </span>
+                        </div>
+                      </div>
+                    </div>
+                    <p class="text-fourth-color text-[14px] font-medium leading-[1.7]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
+                    <div class="flex justify-start items-start flex-row gap-2 mb-2">
+                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M2.74982 18.65C2.33982 18.65 1.99982 18.31 1.99982 17.9V12.2C1.94982 9.48999 2.95982 6.92999 4.83982 5.00999C6.71982 3.09999 9.23982 2.04999 11.9498 2.04999C17.4898 2.04999 21.9998 6.55999 21.9998 12.1V17.8C21.9998 18.21 21.6598 18.55 21.2498 18.55C20.8398 18.55 20.4998 18.21 20.4998 17.8V12.1C20.4998 7.38999 16.6698 3.54999 11.9498 3.54999C9.63982 3.54999 7.49982 4.43999 5.90982 6.05999C4.30982 7.68999 3.45982 9.85999 3.49982 12.18V17.89C3.49982 18.31 3.16982 18.65 2.74982 18.65Z" fill="#3BB77E"/>
+                        <path d="M5.94 12.45H5.81C3.71 12.45 2 14.16 2 16.26V18.14C2 20.24 3.71 21.95 5.81 21.95H5.94C8.04 21.95 9.75 20.24 9.75 18.14V16.26C9.75 14.16 8.04 12.45 5.94 12.45Z" fill="#3BB77E"/>
+                        <path d="M18.19 12.45H18.06C15.96 12.45 14.25 14.16 14.25 16.26V18.14C14.25 20.24 15.96 21.95 18.06 21.95H18.19C20.29 21.95 22 20.24 22 18.14V16.26C22 14.16 20.29 12.45 18.19 12.45Z" fill="#3BB77E"/>
+                      </svg>
+                      <a href="tel:+0123456789" class="text-third-color font-semibold text-[15px]"> 0123456789 </a>
+                    </div>
+                    <div class="flex justify-start items-start flex-row gap-2 mb-4">
+                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11.9999 13.4299C13.723 13.4299 15.1199 12.0331 15.1199 10.3099C15.1199 8.58681 13.723 7.18994 11.9999 7.18994C10.2768 7.18994 8.87988 8.58681 8.87988 10.3099C8.87988 12.0331 10.2768 13.4299 11.9999 13.4299Z" stroke="#3BB77E" stroke-width="1.5"/>
+                        <path d="M3.61995 8.49C5.58995 -0.169998 18.42 -0.159997 20.38 8.5C21.53 13.58 18.37 17.88 15.6 20.54C13.59 22.48 10.41 22.48 8.38995 20.54C5.62995 17.88 2.46995 13.57 3.61995 8.49Z" stroke="#3BB77E" stroke-width="1.5"/>
+                      </svg>                        
+                      <a href="" class="text-third-color font-semibold text-[15px]"> المملكة العربية السعودية- جدة شارع التحلية  </a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
