--- a/product-details.html
+++ b/product-details.html
@@ -246,6 +246,47 @@
                     </div>
                     <p class="text-fourth-color text-[15px] font-medium mb-0 leading-[1.8]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
                     <span class="text-fourth-color text-[14px] font-medium mb-0"> SKU : HFKUHB58POLMQE </span>
+                    
+                    <form action="" class="flex justify-start items-start flex-col gap-3">
+                      <div class="product-size">
+                        <div class=" product-chosse-size  flex justify-start items-center flex-row gap-3">
+                            <label for="xs" class="size-button">xs
+                                <input type="radio" id="">
+                            </label>
+                            <label for="s" class="size-button">S
+                                <input type="radio" id="">
+                            </label>
+                            <label for="m" class="size-button">M
+                                <input type="radio" id="">
+                            </label>
+                            <label for="l" class="size-button">L
+                                <input type="radio" id="">
+                            </label>
+                            <label for="xl" class="size-button">XL
+                                <input type="radio" id="">
+                            </label>
+                        </div>
+                    </div>
+                    <div class="product-color">
+                        <div class=" product-chosse-color flex justify-start items-center flex-row gap-3">
+                            <label for="" class="black color-button" style="background-color:#000;">
+                                <input type="radio">
+                            </label>
+                            <label for="" class="red color-button" style="background-color:#ed1c24;">
+                                <input type="radio">
+                            </label>
+                            <label for="" class="yellow color-button" style="background-color:#f1af4d;">
+                                <input type="radio">
+                            </label>
+                            <label for="" class="brown color-button" style="background-color:#636068;">
+                                <input type="radio">
+                            </label>
+                            <label for="" class="pink color-button" style="background-color:#e8bac4;">
+                                <input type="radio">
+                            </label>
+                        </div>
+                    </div>
+                    </form>
                     <div>
                         <form class="inc_dec text-start border border-solid border-[#ebebeb] rounded-[6px] p-2 w-[250px] flex justify-between items-center flex-row">
                             <div class="value-button text-[20px] cursor-pointer" id="decrease" onclick="decreaseValue()" value="Decrease Value">-</div>
