--- a/product-details.html
+++ b/product-details.html
@@ -205,20 +205,20 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="product_details_imgs flex justify-start items-start flex-col gap-3 relative">
-                    <div class="big_img border border-solid border-[#ebebeb] rounded-[6px] p-4 h-[400px] w-100">
+                    <div class="big_img border border-solid border-[#ebebeb] rounded-[6px] p-4 sm:h-[400px] h-[300px] w-100">
                         <img src="./assets/images/product-d-1.jpg" alt="products" loading="lazy" class="h-100 w-100 object-contain large_image">
                     </div>
-                    <div class="small_imgs flex justify-start items-start flex-row gap-3">
-                        <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 w-[135px] h-[135px]">
+                    <div class="small_imgs flex justify-start items-start flex-row gap-3 overflow-x-scroll">
+                        <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[135px] sm:h-[135px] w-[100px] h-[100px]">
                             <img src="./assets/images/product-d-2.jpg" alt="product" class="w-100 h-100 small_image">
                         </div>
-                        <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 w-[135px] h-[135px]">
+                        <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[135px] sm:h-[135px] w-[100px] h-[100px]">
                             <img src="./assets/images/product-d-3.jpg" alt="product" class="w-100 h-100 small_image">
                         </div>
-                        <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 w-[135px] h-[135px]">
+                        <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[135px] sm:h-[135px] w-[100px] h-[100px]">
                             <img src="./assets/images/product-d-4.jpg" alt="product" class="w-100 h-100 small_image">
                         </div>
-                        <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 w-[135px] h-[135px]">
+                        <div class="border border-solid border-[#ebebeb] rounded-[6px] p-2 sm:w-[135px] sm:h-[135px] w-[100px] h-[100px]">
                             <img src="./assets/images/product-d-5.jpg" alt="product" class="w-100 h-100 small_image">
                         </div>
                     </div>
@@ -226,9 +226,9 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="product_details_info flex justify-start items-start flex-col gap-4">
-                    <span class="bg-second-color text-primary-color font-medium text-[16px] py-[4px] px-[15px] rounded-[6px]"> التاجر </span>
-                    <span class="text-fourth-color text-[14px] text-medium"> أجهزة و تكنولوجيا </span>
+                <div class="product_details_info flex justify-start items-start flex-col sm:gap-[16px] gap-[12px] md:mt-0 mt-4">
+                    <span class="bg-second-color text-primary-color font-medium sm:text-[16px] text-[14px] py-[4px] sm:px-[15px] px-[11px] rounded-[6px]"> التاجر </span>
+                    <span class="text-fourth-color sm:text-[14px] text-[13px] text-medium"> أجهزة و تكنولوجيا </span>
                     <h1 class="text-third-color font-semibold text-[27px] mb-0"> موبايل أيفون 15 برو ماكس , 512GB </h1>
                     <div class="reviews_products flex justify-start items-center flex-row gap-2">
                         <div class="stars flex justify-start items-center flex-row gap-1">
@@ -238,14 +238,14 @@
                             <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
                             <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
                         </div>
-                        <span class="text-fourth-color text-[13px] text-medium"> ( 32 تقييم ) </span>
+                        <span class="text-fourth-color sm:text-[13px] text-[12px] text-medium"> ( 32 تقييم ) </span>
                     </div>
                     <div class="price__prodcut flex justify-start items-center flex-row gap-3">
-                        <span class="text-primary-color font-bold text-[27px]"> 150 ر.س </span>
-                        <span class="text-fourth-color text-[15px] text-medium line-through"> 200 ر.س </span>
+                        <span class="text-primary-color font-bold sm:text-[27px] text-[22px]"> 150 ر.س </span>
+                        <span class="text-fourth-color sm:text-[15px] text-[13px] text-medium line-through"> 200 ر.س </span>
                     </div>
-                    <p class="text-fourth-color text-[15px] font-medium mb-0 leading-[1.8]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
-                    <span class="text-fourth-color text-[14px] font-medium mb-0"> SKU : HFKUHB58POLMQE </span>
+                    <p class="text-fourth-color sm:text-[15px] text-[14px] font-medium mb-0 leading-[1.8]"> هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
+                    <span class="text-fourth-color sm:text-[14px] text-[13px] font-medium mb-0"> SKU : HFKUHB58POLMQE </span>
                     
                     <form action="" class="flex justify-start items-start flex-col gap-3">
                       <div class="product-size">
@@ -288,15 +288,15 @@
                     </div>
                     </form>
                     <div>
-                        <form class="inc_dec text-start border border-solid border-[#ebebeb] rounded-[6px] p-2 w-[250px] flex justify-between items-center flex-row">
+                        <form class="inc_dec text-start border border-solid border-[#ebebeb] rounded-[6px] p-2 w-[250px] flex justify-between items-center flex-row h-[50px]">
                             <div class="value-button text-[20px] cursor-pointer" id="decrease" onclick="decreaseValue()" value="Decrease Value">-</div>
                             <input type="number" id="number" value="1" class="text-center" min="1"/>
                             <div class="value-button cursor-pointer" id="increase" onclick="increaseValue()" value="Increase Value">+</div>
                         </form>
                     </div>
-                    <div class="flex justify-start items-center flex-row gap-3">
-                        <button type="button" class="bg-primary-color text-white py-[8px] px-[25px] rounded-[6px] w-[250px]"> إضافة إلى السلة </button>
-                        <button class="toggleButton border border-solid border-[#ebebeb] p-2 rounded-[6px]">  
+                    <div class="flex justify-start items-center flex-row gap-3 flex-wrap">
+                        <button type="button" class="bg-primary-color text-white py-[8px] px-[25px] rounded-[6px] w-[250px] h-[50px]"> إضافة إلى السلة </button>
+                        <button class="toggleButton border border-solid border-[#ebebeb] p-2 rounded-[6px] h-[50px]">  
                             <svg class="heartIcon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M12.62 20.8101C12.28 20.9301 11.72 20.9301 11.38 20.8101C8.48 19.8201 2 15.6901 2 8.6901C2 5.6001 4.49 3.1001 7.56 3.1001C9.38 3.1001 10.99 3.9801 12 5.3401C13.01 3.9801 14.63 3.1001 16.44 3.1001C19.51 3.1001 22 5.6001 22 8.6901C22 15.6901 15.52 19.8201 12.62 20.8101Z" stroke="#292D32" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>                                
@@ -337,7 +337,7 @@
                     <div class="reviews_items flex justify-start items-start flex-col">
                       <div class="review_item mb-4 border border-solid border-[#ebebeb] py-[25px] px-[20px] rounded-[15px] flex justify-start items-start flex-col gap-2">
                         <div class="flex justify-between items-center flex-row flex-wrap w-100">
-                          <h6 class="text-third-color font-semibold text-[20px] mb-0"> أحمد يسري </h6>
+                          <h6 class="text-third-color font-semibold sm:text-[20px] text-[18px] mb-0"> أحمد يسري </h6>
                           <div class="stars flex justify-start items-center flex-row gap-1">
                             <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
                             <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
@@ -346,12 +346,12 @@
                             <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
                           </div>
                         </div>
-                        <span class="text-fourth-color text-[13px] font-medium"> 27-11-2020 </span>
-                        <p class="text-fourth-color text-[16px] font-medium leading-[1.7] mb-0">  هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
+                        <span class="text-fourth-color sm:text-[13px] text-[12px] font-medium"> 27-11-2020 </span>
+                        <p class="text-fourth-color sm:text-[16px] text-[15px] font-medium leading-[1.7] mb-0">  هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
                       </div>
                       <div class="review_item mb-4 border border-solid border-[#ebebeb] py-[25px] px-[20px] rounded-[15px] flex justify-start items-start flex-col gap-2">
                         <div class="flex justify-between items-center flex-row flex-wrap w-100">
-                          <h6 class="text-third-color font-semibold text-[20px] mb-0"> أحمد يسري </h6>
+                          <h6 class="text-third-color font-semibold sm:text-[20px] text-[18px] mb-0"> أحمد يسري </h6>
                           <div class="stars flex justify-start items-center flex-row gap-1">
                             <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
                             <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
@@ -360,12 +360,12 @@
                             <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
                           </div>
                         </div>
-                        <span class="text-fourth-color text-[13px] font-medium"> 27-11-2020 </span>
-                        <p class="text-fourth-color text-[16px] font-medium leading-[1.7] mb-0">  هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
+                        <span class="text-fourth-color sm:text-[13px] text-[12px] font-medium"> 27-11-2020 </span>
+                        <p class="text-fourth-color sm:text-[16px] text-[15px] font-medium leading-[1.7] mb-0">  هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
                       </div>
                       <div class="review_item mb-4 border border-solid border-[#ebebeb] py-[25px] px-[20px] rounded-[15px] flex justify-start items-start flex-col gap-2">
                         <div class="flex justify-between items-center flex-row flex-wrap w-100">
-                          <h6 class="text-third-color font-semibold text-[20px] mb-0"> أحمد يسري </h6>
+                          <h6 class="text-third-color font-semibold sm:text-[20px] text-[18px] mb-0"> أحمد يسري </h6>
                           <div class="stars flex justify-start items-center flex-row gap-1">
                             <i class="fa-solid fa-star text-primary-color text-[12px]"></i>
                             <i class="fa-solid fa-star text-primary-color  text-[12px]"></i>
@@ -374,10 +374,10 @@
                             <i class="fa-regular fa-star !text-third-color  text-[12px]"></i>
                           </div>
                         </div>
-                        <span class="text-fourth-color text-[13px] font-medium"> 27-11-2020 </span>
-                        <p class="text-fourth-color text-[16px] font-medium leading-[1.7] mb-0">  هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
+                        <span class="text-fourth-color sm:text-[13px] text-[12px] font-medium"> 27-11-2020 </span>
+                        <p class="text-fourth-color sm:text-[16px] text-[15px] font-medium leading-[1.7] mb-0">  هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص  </p>
                       </div>
-                      <form action="" class="w-50">
+                      <form action="" class="sm:w-50 !w-100">
                         <form action="" class="mt-5">
                           <input class="form-control border-fourth-color mb-3" type="text" placeholder="الإسم" aria-label="">
                           <input class="form-control border-fourth-color mb-3" type="email" placeholder="البريد الألكتروني" aria-label="">
